test/src/e2e_vm_tests/test_programs/should_fail/error_deduplication/src/main.sw
contract;

fn foo() -> u64 {
    let y = if x { 42 } else { 43 };
    if x { y } else { y }
}

fn foo() {}
fn foo() {}